--- a/authors-output/Andrei Stoica/index.html
+++ b/authors-output/Andrei Stoica/index.html
@@ -14,6 +14,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet"
+      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.1.0/build/styles/base16/decaf.min.css">
 	<link href="/css/base.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -37,7 +39,7 @@
 				
 				<li
 				>
-				<a href="/pages/resume/">Resume</a>
+				<a href="/pages/resume/">Resume - postproccesing</a>
 				</li>
 				
 			</ul>
@@ -104,11 +106,15 @@
 	</div>
 </div>
 
-	<footer>Copyright &copy; 2021 Andrei Stoica
+	<footer>Copyright &copy; 2022 Andrei Stoica
 		<p style="text-align: center">Powered by <a href="http://cryogenweb.org">Cryogen</a></p>
 	</footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.1.0/build/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+
+
 </body>
 </html>
