--- a/pages/resume/index.html
+++ b/pages/resume/index.html
@@ -104,7 +104,7 @@
 			</div>
 			
 		</div></div></div>
-</p><div class="container event"><div class="row"><div class="title">Graduate Research Assistant</div><div class="date">Aug. 2018 - August 2020</div></div><div class="row"><div class="location">Ontario Tech University, Oshawa, ON</div><div class="desc">
+</p><div class="container event"><div class="row"><div class="title">Graduate Research Assistant</div><div class="date">May 2018 - Aug. 2020</div></div><div class="row"><div class="location">Ontario Tech University, Oshawa, ON</div><div class="desc">
 			
 			<div>
 			
