--- a/pages/resume/index.html
+++ b/pages/resume/index.html
@@ -64,8 +64,8 @@
         <h2>Resume</h2>
     </div>
     
-    <p>Printable single page version <a href="/static/resume-andrei-stoica.pdf">here</a></p><h2 id="education">Education</h2><p></p><div class="container event"><div class="row"><div class="title">Bachelor of Science - Computer Science</div><div class="date">2018</div></div><div class="row"><div class="location">Ontario Tech University, Oshawa, ON</div></div></div>
-</p><div class="container event"><div class="row"><div class="title">Master of Science - Computer Science</div><div class="date">2022</div></div><div class="row"><div class="location">Ontario Tech University, Oshawa, ON</div></div></div>
+    <p>Printable single page version <a href="/static/resume-andrei-stoica.pdf">here</a></p><h2 id="education">Education</h2><p></p><div class="container event"><div class="row"><div class="title">Master of Science - Computer Science</div><div class="date">2022</div></div><div class="row"><div class="location">Ontario Tech University, Oshawa, ON</div></div></div>
+</p><div class="container event"><div class="row"><div class="title">Bachelor of Science - Computer Science</div><div class="date">2018</div></div><div class="row"><div class="location">Ontario Tech University, Oshawa, ON</div></div></div>
 
 <h2 id="work-experience">Work Experience</h2><p></p><div class="container event"><div class="row"><div class="title">Teaching Assistant</div><div class="date">Sept. 2017 - Present</div></div><div class="row"><div class="location">Ontario Tech University, Oshawa, ON</div><div class="desc">
 			
